--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
 
 .bg-body-tertiary {
@@ -24,6 +25,10 @@
     width: 65%;
 }
 
+ul.nav a::hover {
+    color: gray !important;
+}
+
 .header-image {
     width: 1550px;
     height: 450px;
@@ -40,4 +45,82 @@
 
     position: relative;
     bottom: 325px;
+}
+
+.container-height {
+    height: 550px;
+}
+
+
+.intro-text h3 {
+    font-family: Dosis;
+    font-weight: 300;
+    font-size: xx-large;
+}
+
+.intro-text p {
+    font-family: sans-serif;
+    font-size: 0.85rem;
+}
+
+.intro-text {
+    padding-left: 1px;
+}
+
+.image-finest {
+    height: 115px;
+}
+
+.image-satisfaction {
+    height: 115px;
+}
+
+.image-genuine {
+    height: 115px;
+}
+
+.hamster-image {
+    width: 275px;
+    height: 315px;
+
+    object-fit: cover;
+    position: relative;
+    left: 65px;
+}
+
+.intro-container {
+    display: flex;
+    justify-content: center;
+    width: 1180px;
+    padding-bottom: 100px;
+}
+
+.roomcard-background {
+    width: 1550px;
+    height: 600px;
+
+    object-fit: cover;
+    object-position: top 100px;
+}
+
+.room-titletext {
+    font-family: Dosis;
+    font-size: 35px;
+    text-align: center;
+    color: white;
+}
+
+.card-container {
+    position: relative;
+    bottom: 550px;
+}
+
+.card-title {
+    font-family: Dosis;
+
+}
+
+.card-text {
+    font-family: sans-serif;
+    font-size: 12px;
 }
