Reserve Room Updated

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ ul.nav a::hover {
 }
 
 .header-image {
-    width: 1550px;
+    width: 100%;
     height: 450px;
 
     object-fit: cover;
@@ -100,7 +100,7 @@ ul.nav a::hover {
 }
 
 .roomcard-background {
-    width: 1550px;
+    width: 100%;
     height: 675px;
 
     object-fit: cover;
@@ -190,12 +190,13 @@ ul.nav a::hover {
 
 .amenities-container {
     margin-top: 100px;
+    height: 700px;
 }
 
 .amenities-subcontainer {
     display: block;
     justify-content: center;
-    width: 1000px;
+    width: 100%;
     position: relative;
     bottom: 535px;
 }
@@ -246,4 +247,51 @@ ul.nav a::hover {
     margin-top: 75px;
 }
 
+.reserve-container {
+    width: 1000px;
+    margin-bottom: 90px;
+}
+
+.reserverow-bg {
+    background-color: #000324;
+}
+
+.reserve-title {
+    font-family: Dosis;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+}
+
+.reserve-image {
+    width: 100%;
+    height: 414px;
+    object-fit: cover;
+}
+
+.reserve-text {
+    font-family: sans-serif;
+    color: white;
+    font-weight: 200;
+    font-size: .85rem;
+}
+
+.reserve-input {
+    width: 110%;
+    height: 31%;
+    border-radius: 0%;
+    border: 0;
+}
+
+.reserve-button {
+    width: 154.08px;
+    height: 30px;
+
+    position: relative;
+    top: 23px;
+}
+
+.input-container {
+    width: 90%;
+}
 
