--- a/styles/style.css
+++ b/styles/style.css
@@ -295,3 +295,18 @@ ul.nav a::hover {
     width: 90%;
 }
 
+.footer-bg {
+    background-color: #000324;
+}
+
+.footer-logo {
+    width: 8%;
+}
+
+.footer-text {
+    font-family: sans-serif;
+    color: white;
+    font-size: .75rem;
+    text-align: center;
+}
+
