--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
+/* Navbar */
 
 .bg-body-tertiary {
     background-color: #000324 !important;
@@ -33,6 +34,8 @@ ul.nav a::hover {
     color: gray !important;
 }
 
+/* Header */
+
 .header-image {
     width: 100%;
     height: 450px;
@@ -55,6 +58,7 @@ ul.nav a::hover {
     height: 550px;
 }
 
+/* Introduction Section */
 
 .intro-text h3 {
     font-family: Dosis;
@@ -98,6 +102,8 @@ ul.nav a::hover {
     width: 1180px;
     padding-bottom: 100px;
 }
+
+/* Hotel Rooms Section */
 
 .roomcard-background {
     width: 100%;
@@ -146,6 +152,8 @@ ul.nav a::hover {
     margin-top: 90px;
 }
 
+/* Packages Section */
+
 .packages-container {
     width: 1000px;
 }
@@ -185,8 +193,9 @@ ul.nav a::hover {
 .packages-description {
     font-family: sans-serif;
     padding-top: 15px;
-    
 }
+
+/* Amenities Section */
 
 .amenities-container {
     margin-top: 100px;
@@ -247,6 +256,8 @@ ul.nav a::hover {
     margin-top: 75px;
 }
 
+/* Reservation Section */
+
 .reserve-container {
     width: 1000px;
     margin-bottom: 90px;
@@ -294,6 +305,8 @@ ul.nav a::hover {
 .input-container {
     width: 90%;
 }
+
+/* Footer Section */
 
 .footer-bg {
     background-color: #000324;
