--- a/styles/style.css
+++ b/styles/style.css
@@ -415,10 +415,6 @@ ul.nav a::hover {
     .pool-image {
         width: 75%;
     }
-    
-
-
-
 
 }
 
@@ -587,7 +583,220 @@ ul.nav a::hover {
         font-size: 11px;
         font-weight: 400;
     }
+    
+}
+
+@media screen and (max-width: 425px) {
+
+    /* Header */
+
+    .header-image {
+        width: 100%;
+        height: 400px;
+    
+        object-fit: cover;
+    }
+    
+    .header-text {
+        font-family: Dosis;
+        width: 50%;
+        color: white;
+        background-color: rgb(0, 3, 36, 75%);
+    
+        position: relative;
+        bottom: 355px;
+    }
+    
+    .container-height {
+        height: 475px;
+    }
+
+    .header-container {
+        width: 325px;
+
+        margin-left: 0px;
+        margin-right: 0px;
+
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+
+        position: relative;
+        left: 50px;
+        bottom: 300px;
+    }
+
+    /* Introduction */
+
+    .intro-text h3 {
+        font-family: Dosis;
+        font-weight: 500;
+        font-size: 30px;
+    }
+    
+    .intro-text p {
+        font-family: sans-serif;
+        font-size: 0.85rem;
+    }
+    
+    .intro-text {
+        padding-left: 0px !important;
+        width: 400px;
+        height: 500px;
+
+        position: relative;
+        left: 25px !important;
+    }
+    
+    .image-finest {
+        padding-top: 10px;
+        height: 100%;
+    }
+    
+    .image-satisfaction {
+        padding-top: 10px;
+        height: 100%;
+    }
+    
+    .image-genuine {
+        padding-top: 10px;
+        height: 100%;
+    }
+    
+    .hamster-image {
+        width: 400px !important;
+        height: 250px !important;
+    
+        object-fit: cover;
+
+        position: relative;
+        left: 10px;
+        bottom: 50px;
+    }
+
+    .intro-container {
+        width: 450px;
+        padding: 0px;
+    }
+
+    /* Rooms */
+
+    .roomcard-background {
+        width: 100%;
+        height: 1775px !important;
+    
+        object-fit: cover;
+    }
+    
+    .room-titletext {
+        font-family: Dosis;
+        font-size: 35px;
+        text-align: center;
+        color: white;
+    }
+    
+    .card-container {
+        position: relative;
+        bottom: 1700px;
+    }
+
+    .card {
+        width: 350px !important;
+        margin-bottom: 15px;
+    }
+    
+    .card-title {
+        font-family: Dosis;
+    }
+    
+    .card-secondtitle {
+        font-family: sans-serif;
+        font-weight: 600;
+    }
+    
+    .card-text {
+        font-family: sans-serif;
+        font-size: 12px;
+    }
+    
+    .room-container {
+        height: 1800px;
+    }
+    
+    .btn {
+        font-family: sans-serif;
+        font-weight: 600;
+    }
+    
+    .btn-margin {
+        margin-top: 90px;
+    }
+
+    /* Packages */
+
+    .packages-container {
+        padding-right: 0px;
+        margin-right: 0px;
+    }
+
+    .packages-container .col-6 {
+        
+        padding-right: 0px !important;
+
+    }
+
+    .packages-images {
+        width: 400px !important;
+        height: 280px;
+    
+        object-fit: cover;
+    }
+
+    .packages-title {
+        padding-top: 15px;
+    }
+
+    .packages-images {
+        padding-top: 15px;
+    }
+
+    /* Amenities */
+
+    .amenities-width {
+        width: 100px !important;
+    }
+    
+    .amenities-images {
+        width: 100%;
+    }
+    
+    .valet-image {
+        width: 100%%;
+    }
+    
+    .pool-image {
+        width: 100%%;
+    }
 
 
+
+
+    .reserve-container {
+        width: 425px;
+        padding: 0px;
+    }
+
+    .packages-container {
+        width: 425px;
+        padding: 0px;
+    }
+
+    .amenities-width {
+        width: 425px;
+        padding: 0px;
+    }
+
+    .packages-images {
+        width: 50px;
+    }
     
 }
