--- a/styles/style.css
+++ b/styles/style.css
@@ -770,11 +770,11 @@ ul.nav a::hover {
     }
     
     .valet-image {
-        width: 100%%;
+        width: 100%;
     }
     
     .pool-image {
-        width: 100%%;
+        width: 100%;
     }
 
 
